package Network;

option java_outer_classname = "Protocol";

message ClientMessage {
	required ProtocolCode	pcode = 1;				// protocol number
	required int32		packetId = 2;
	required bytes		payload = 3;
	optional int32		recvCounter = 4;
}

message ServerMessage {
	required ProtocolCode	pcode = 1;				// protocol number
	required bytes		payload = 2;
}

message AdminMessage {
	required ProtocolCode	pcode = 1;				// protocol number
	required bytes		payload = 2;
}

enum ProtocolCode {
	C_ERROR			= 1;

	C_LOGIN_REQ		= 10;
	S_LOGIN_RES		= 11;
	C_KEEP_ALIVE		= 12;
	C_JOINED_GAME		= 13;
	C_UPDATE_DEVICE_INFO 	= 14;
	C_UNREGISTER_GAME		= 15;
	C_GET_CASH_INFO		= 16;
	C_UPDATE_SLEEP_SETTINGS = 17;
	C_CHANGE_CAFE_TITLE = 18;
	C_CHANGE_FIRST_VISIT_STORE = 19;

	C_LOAD_DATA		= 20;
	C_OBJ_ADD		= 21;
	C_OBJ_MOVE		= 22;
	C_OBJ_SELL		= 23;
	C_EXPAND		= 24;
	C_TILE_ADD		= 25;
	C_TILE_SWAP		= 26;
	C_OBJ_STORE 	= 27;
	C_OBJ_STORE_ALL	= 28;
	C_SELL_INVEN	= 29;
	C_OBJ_REPLACE	= 34;
	C_OBJ_BUY		= 35;
	C_OBJ_DECO_UP	= 36;
	C_OBJ_CHANGE_COLOR = 39;
	C_INVEN_OBJ_CHANGE_COLOR = 94;
	C_CAR_CHANGE_COLOR = 95;
	C_OBJ_EXTENSION_PERIOD 	= 96;
	C_OBJ_BUY_TWOPLUSONE = 97;
	C_OBJ_EXCHANGE = 98;

	C_ROAST			= 30;
	C_ROAST_FIN		= 31;
	C_ROAST_IMMEDIATE	= 32;
	C_ROAST_REVIVE		= 33;
	C_CHARGED_ROAST_HARVEST		= 37;
	C_ROAST_FULLCHARGE		= 38;

	
	C_COFFEE		= 40;
	C_COFFEE_SELL		= 41;
	C_COFFEE_FIN		= 42;
	C_COFFEE_IMMEDIATTE = 43;

	C_FLOOR_ADD_TRASH	= 44;
	C_CLEAN_FLOOR		= 45;
	C_CLEAN_RECYCLE		= 46;
	C_CLEAN_TABLE		= 47;
	C_CLEAN_MACHINE		= 48;
	C_CANCEL_WORK		= 49;

	C_QUEST_START		= 50;
	C_QUEST_PROGRESS	= 51;
	C_QUEST_FINISH		= 52;
	C_QUEST_REQUEST		= 53;
	C_QUEST_RESPONSE	= 54;
	C_QUEST_INSTANT_COMPLETION = 55;
	C_QUEST_REMOVE_NEW_FLAG = 56;
	C_REQUEST_INSTANT_COMPLETION_BY_INVITEE= 57;
	

	C_STAFF_HIRE		= 60;
	C_STAFF_DRESSUP		= 61;
	C_STAFF_BODYANDNAME	= 65;
	C_STAFF_FULLCHARGE	= 66;
	C_STAFF_BOOST		= 67;
	
	C_AVATAR_BUY	= 70;

	S_RESPONSE		= 80;

	C_OPEN_NEW_STORE = 90;
	C_OPEN_NEW_STORE_AT_ONCE = 91;

	C_SAVE_DESIGN_HISTORY = 100;
	C_REQUEST_DESIGN_HISTORY_DATA = 101;
	
	C_VISIT_FRIEND  	= 110;
	C_VISIT_ACTION  	= 112;
	C_VISIT_RESPONSE	= 113;
	C_VISIT_REVIVEALL	= 114;
	C_RESPONSE_REVIVEALL = 115;
	C_Add_FavoriteFriend = 116;
	C_Remove_FavoriteFriend = 117;
	
	C_INVITE_SMS		= 121;
	C_INVITE_FRIEND		= 122;
	C_INVITE_KAKAO_EVENT	= 123;
	C_INVITE_DORMANT		= 124;
	C_INVITE_COMEBACK		= 125;
	C_INVITE_COMEBACK_COMPLETE_COUNT 	= 126;
	

	C_EXPANSION_REQUEST		= 130;
	C_EXPANSION_RESPONSE		= 131;
	C_EXPANSION_BUYPERMISSION	= 132;
	C_EXPANSION_BUYALLPERMISSION	= 133;
	C_EXPANSION_COMPLETE		= 134;
	C_EXPANSION_PERMISSION_BY_INVITEE	= 135;
	C_CHAIN_EXPANSION_SHORTEN	= 137;

	C_SPECIAL_REQUEST_FOR_TUTORIAL	= 140;

	C_NPC_REACTION		= 150;

	C_TOUTING_RESULT	= 160;
	C_RETRY_TOUT		= 161;
	C_PATRON_TOUTING_RESULT	= 162;
	C_PATRON_EVENT_TOUTING_RESULT = 163;

	C_CLEAN_CHAIR		= 170;

	C_RELOAD_BALANCE	= 180;

	C_FREEGIFT_SEND		= 190;
	C_FREEGIFT_RESPONSE	= 191;
	
	C_NPCGIFT_SEND		= 200;

	C_INC_DAILY_LIMIT	= 210;
	C_INC_WEEKLY_LIMIT	= 211;

	C_TRY_EXPIRE		= 220;

	C_GET_DAILY_REWARD	= 230;

	C_SIDEDISH_START	= 250;
	C_SIDEDISH_SELL		= 251;
	C_SIDEDISH_FIN		= 252;
	C_SELL_SIDEDISH_SHORTEN	= 253;
	C_CHARGED_SIDEDISH_HARVEST = 254;
	C_SIDEDISH_FULLCHARGE = 255;
	C_CHARGING_SIDEDISH_MENU_CHANGE = 256;
	
	C_MIX_ITEM = 260;
	C_MIX_ITEM_FIN = 261;
	C_MIX_ITEM_SHORTEN = 262;
	C_IS_ITEMMIXER_WORKING = 263;
	
	C_BUY_CASH_BEAN = 270;
	C_INC_BEAN_LEVEL = 271;
	C_BUY_ROAST_TICKET = 272;
	
	C_BUY_BACKGROUND = 275;
	C_CHANGE_BACKGROUND = 276;
	C_CHANGE_SECONDFLOOR_BACKGROUND = 277;

	C_UNLOCK_BEAN		= 280;
	C_UNLOCK_COFFEE		= 281;
	C_UNLOCK_SIDEDISH	= 282;

	C_WRITE_LOG		= 300;

	C_USE_COUPON		= 310;
	C_GET_FIRST_CHARGE_BONUS	= 311;
	S_USE_COUPON_RESULT = 312;

	C_LOVELYGIFT_SEND	= 320;

	C_BUY_ALL		= 334;
	C_REVERT_DESIGN	= 335;
	
	C_ROASTTICKET_HARVEST = 339;
	C_CASHTREE_HARVEST = 340;
	C_CASHTREE_PUSH_ENABLE = 341;

	C_CHERRYTREE_HELP = 342;
	C_CHERRYTREE_HELP_LIST = 343;
	C_CHERRYTREE_HARVEST = 344;
	C_CHERRYTREE_INIT_HELP = 345;
	C_EXIST_CHERRYTREE_INVEN = 346;

	C_EXPAND_AT_ONCE	= 350;

	C_TILE_TO_SET_ALL = 360;
	C_TILE_TO_SET_DRAW = 361;
	C_TILE_TO_SET_ALL_THIRD_STORE = 362;

	C_PATRON_TOUT_INSTANT_COMPLETION = 370;
	C_BUY_PATRON_ITEM = 371;
	C_FULFILL_PATRON_FAVOR = 372;
	C_GET_PATRON_PRESENT = 373;
	C_PATRON_TOUT_INSTANT_CALL = 374;
	C_GET_SPECIAL_PATRON_PRESENT = 375;
	C_SKIP_PATRON_EVENT = 376;
	C_TALK_PATRON = 377;
	C_SPECIAL_TALK_PATRON_RESULT = 378;

	C_BARISTA_TEST_PROGRESS = 380;
	C_BARISTA_TEST_QUIT = 381;
	C_BARISTA_TEST_UPGRADE = 382;
	C_BARISTA_GUIDE_DONE = 383;
	C_BARISTA_TEST_STATUS = 384;
	
	C_PATRON_ORDER_DONE = 385;
	C_PATRON_ORDER_EVALUATE = 386;
	
	C_BARISTA_TEST_UPGRADE_BY_CASH = 387;
	C_BARISTA_TEST_RETRY = 388;

	C_REFRESH_DATA_AFTER_LEVEL_UP = 390;
	
	C_PATRON_ORDER_DONE_BY_MACHINE = 391;

	C_GET_RECYCLE_TIP	= 400;

	C_RESPONSE_ALL_QUEST_AND_EXPANSION = 410;
	
	C_GET_FRIEND_INFO = 420;
	C_GET_CHARGE_OBJECT = 421;
	
	C_MIGRATE_GUEST_TO_KAKAO = 430;
	
	C_INDUCED_ACTION = 440;
	
	C_PURCHASE_GOLD = 450;
	
	C_AUTO_COFFEE_MACHINE_START = 460;
	C_AUTO_COFFEE_MACHINE_FIN = 461;
	C_AUTO_COFFEE_MACHINE_SHORTEN = 462;
	C_COFFEE_FIN_AUTO = 463;

	C_BUY_POINT_ITEM = 470;
	C_BUY_SHOP_POINT = 471;
	
	C_STORE_BEANBOX = 480;
	C_UPGRADE_BEANDEPOT = 481;
	
	C_CONFIRM_EXPIRED_SALE_EVENT = 500;
	
	C_SEND_CLOVER = 510;
	C_GET_CLOVER_REWARD = 511;
	
	C_CONFIRM_REFRESH_CHARGE_EVENT = 520;

	C_XP_REWARD = 530;

	C_REFRESH_DAISO_ITEM = 540;
	C_BUY_DAISO_ITEM = 541;

	C_CAR_REPLACE = 600;
	
	C_CHANGE_RANDOM_FRIEND_CONFIG = 700;
	C_CHANGE_RANDOM_FRIEND_NAME = 701;
	C_HIDE_RANDOM_FRIEND_FOLLOWER = 702;
	C_REMOVE_HIDE_FOLLOWER = 703;
	C_GET_HIDE_RANDOM_FRIEND_FOLLOWER = 704;
	
	C_IN_APP_PURCHASE_RESULT = 900;
	C_GET_TRANX_ID = 901;
	S_PURCHASE_CONFIRMED = 902;
	C_GET_DANAL_SERVER_INFO = 903;
	C_DANAL_SIM_BILL = 904;
	C_DANAL_RESEND_OTP = 905;
	C_DANAL_REBILL_WP = 906;
	S_DANAL_RESULT_RECEIVED = 907;
	C_DANAL_DEL_AUTHKEY = 908;
	C_FORCE_IN_APP_PURCHASE_RESULT = 909;

	S_GIFT_BOX_LOADED	= 1001;
	C_GIFT_RECEIVE		= 1002;
	C_RELOAD_GIFT_BOX	= 1003;
	C_GIFT_RECEIVE_MULTIPLE = 1004;

	C_GET_ALL_WRITINGS	= 1010;
	C_PUSH_WRITING		= 1011;
	C_GUESTBOOK_ALLSECRET = 1012;
	C_PUSH_COMMENT		= 1013;
	C_GUESTBOOK_SET_TITLE	= 1014;
	C_REMOVE_WRITING		= 1015;
	C_REMOVE_COMMENT		= 1016;
	C_MODIFY_WRITING		= 1017;
	C_MODIFY_COMMENT		= 1018;	
	
	C_BUY_LUCKYBOX		= 1030;
	C_OPEN_LUCKYBOX		= 1031;
	C_OPEN_SPECIALBOX	= 1032;
	C_BUY_PACKAGEBOX	= 1033;
	C_OPEN_PACKAGEBOX	= 1034;
	C_BUY_ITEMCOUPON 	= 1035;
	C_USE_ITEMCOUPON 	= 1036;
	C_BUY_OPEN_LUCKYBOX = 1038;

	C_BUY_NPCGIFT		= 1040;
	
	C_REPORT_FRIENDS_COUNT	= 1050;
	
	C_SEND_EVENT_GIFT = 1060;
	S_EVENT_UPDATED = 1070;
	
	C_REDUCE_EVENT = 1071;
	
	C_STAMP_EVENT = 1075;
	C_STAMP_EVENT_CLAIM_REWARD = 1076;
	C_STAMP_EVENT_CASH_STAMP = 1077;
	
	C_INVITE_KAKAO_EVENT_SEND = 1080;
	C_INVITE_KAKAO_EVENT_THANKS = 1081;

	C_HOT_DEAL_BUY			= 1090;
	C_HOT_DEAL_POLL			= 1091;

	C_SET_CALENDAR_GMT		= 1100;

	C_USE_JUKE_BOX			= 1200;

	C_MAKE_SIDEDISH_START	= 2000;
	C_MAKE_SIDEDISH_FIN		= 2001;
	C_MAKE_SIDEDISH_SHORTEN	= 2002;
	C_MAKE_SIDEDISH_REVIVE	= 2003;

	C_MAKE_FORTUNECOOKIE_START	= 2050;
	C_MAKE_FORTUNECOOKIE_FIN	= 2051;
	
	C_GRANT_NEW_DAILY_QUEST	= 2100;
	C_DAILY_QUEST_PROGRESS	= 2101;
	C_DAILY_QUEST_FINISH	= 2102;
	C_DAILY_QUEST_INSTANT_COMPLETION = 2103;
	C_DAILY_QUEST_GET_DATA 	= 2104;

	C_POINTMISSION_FINISH	= 2150;
	C_POINTMISSION_INSTANT_COMPLETION	= 2151;
	C_GRANT_NEW_POINTMISSION = 2152;
	C_POINTMISSION_GETPRESENT = 2153;
	
	C_OPEN_POINT_BOX = 2155;
	C_BUY_BOX_POINT = 2156;
	C_GET_ONTIME_BOX_POINT = 2157;

	C_EVENTDICE_RESET 		= 2160;
	C_EVENTDICE_FINISH		= 2161;
	C_EVENTDICE_USE_DICE	= 2162;
	C_EVENTDICE_BUY_DICE	= 2163;
	C_EVENTDICE_FORCE_MOVE_START_POINT = 2164;
	C_EVENTDICE_FORCE_MOVE_BY_GOLDCARD = 2165;
	C_EVENTDICE_SEND_GIFT  	= 2166;
	C_EVENTDICE_RECV_GIFT 	= 2167;
	C_EVENTDICE_RESET_GIFT 	= 2168;
	C_EVENTDICE_FIRST_VISIT	= 2169;
	
	C_EVENTGOM_CHECK_REWARD		= 2180;

	C_BINGOMISSION_FINISH	= 2190;
	C_BINGOMISSION_INSTANT_COMPLETION	= 2191;
	C_GRANT_NEW_BINGOMISSION = 2192;
	C_BINGOMISSION_GETPRESENT = 2193;
	C_BINGOMISSION_GETNUMBER = 2194;
	C_BINGOMISSION_QUEST_RESET = 2195;

	C_GET_ACHIEVEMENT_REWARD = 2200;
	C_PROCEED_ACHIEVEMENT = 2201;
	C_TAROT_REWARD = 2202;
	C_APPLY_TAROT_SKILL = 2203;
	
	C_TAROT_QUESTION = 2204;

	C_TAROT_BUY_TICKET = 2205;	
	
	C_THIRDSTORE_HOST_DAILY_REWARD = 2310;
	C_THIRDSTORE_COMPLETE_FAVOR = 2311;
	C_THIRDSTORE_INSTANT_FILL_SALEPOINT = 2320;
	C_THIRDSTORE_INSTANT_FILL_FAVOR = 2321;

	C_RELOAD_DATA		= 4000;

	A_SERVER_RESPONSE	= 3000;
	A_NOTIFY_MESSAGE	= 3001;
	A_KICK_USER			= 3002;
	A_UPDATE_EVENT_XML	= 3003;
	A_RELOAD_GIFTBOX	= 3004;
	A_POPUP_MESSAGE		= 3005;
	
	C_HARVEST_ALL_WORK_OBJ	= 3100;
	
	S_POPUP_MESSAGE = 7000;
	C_USE_CHERRY_ROULETTE = 3200;
	C_BUY_ROULETTE_BEAN = 3201;
	

	C_SUBMIT_SURVEY = 4001;
	C_SUBMIT_SURVEY_TEST = 4002;
	C_RESET_SURVEY_TEST = 4003;
	
	C_EXPAND_SECONDFLOOR = 4100;
	C_EXPAND_THIRDSTORE = 4101;
	C_EXPAND_THIRDSTORE_INSTANT = 4102;
	C_EXPAND_THIRDSTORE_COMPLETE = 4103;	
	C_RESTART_THIRDSTORE = 4104;
	C_THIRDSTORE_RECV_EXPAND_REWARD = 4105;
	C_THIRDSTORE_RECALC_EXPAND_REWARD = 4106;
	C_THIRDSTORE_RECV_RARE_REWARD = 4107;
	C_RESTART_THIRDSTORE_EXPANSION = 4108;
	C_EXPAND_TOPFLOOR = 4109;

	C_DUTCH_COFFEE				= 4200;
	C_DUTCH_LIQUID_MAKE			= 4201;
	C_DUTCH_LIQUID_MAKE_FIN		= 4202;
	C_DUTCH_LIQUID_SELL_START	= 4203;
	C_DUTCH_LIQUID_SELL			= 4204;
	C_DUTCH_LIQUID_SELL_FIN		= 4205;
	C_DUTCH_LIQUID_MAKE_IMMEDIATTE		= 4206;

	C_PATRON_MACHINE_CALL = 4300;
	C_PATRON_MACHINE_FIN = 4301;

	C_COMEBACK_SEND_GIFT  	= 4401;
	C_COMEBACK_RECV_GIFT 	= 4402;

	C_CHARGE_COLLECTION	= 5000;
	C_RECEIVE_CHARGE_OBJ = 5001;
	C_RECEIVE_COLLECTION_GIFT = 5002;

	C_RECEIVE_LEVEL_UP_REWARD = 5010;

	C_PET_AWAKE				= 6000;
	C_PET_PUTTOSLEEP		= 6001;
	C_PET_WITHPLAYING		= 6002;
	C_PET_CARE				= 6003;
	C_PET_TREAT				= 6004;
	C_PET_STATUS_UPDATE  	= 6005;
	C_PET_USERACTION		= 6006;
	C_PET_EAT_FEED			= 6007;
	C_PET_EAT_SNACK			= 6008;
	C_BUY_PET_ITEM   		= 6030;
	C_FILL_PET_FEED			= 6031;
	C_CLEAR_PET_FEED		= 6032;
	C_PET_PLAY_WITHOBJ		= 6033;
	C_PET_PUT_STATUS_UPDATE  	= 6034;

	C_PET_DRESSUP			= 6050;
	
	C_PET_LEARN_SECOND_SKILL		= 6070;
	C_PET_SKILL_CHANGE				= 6071;
	C_PET_USE_SKILL					= 6072;
	C_PET_USE_SKILL_GETRESOURCE		= 6073;
	C_PET_USE_SKILL_TOUTHINT		= 6074;
	
	C_PET_RE_NAMING			= 6100;
	C_PET_REVERT_BEFORE_HP	= 6110;

	C_PET_ADOPT = 6200;
	C_PET_PUT = 6210;
	C_PET_CURE = 6211;
	C_PET_TAKE = 6212;

	C_PET_PUT_SIZE_EXPAND = 6220;

	C_PET_CHANGE = 6230;

	C_UNREGISTER_CANCEL = 8000;
	C_DEV_COMMAND = 9000;
	C_DEV_TIMESET = 9001;
	C_CHERRY_ROASTING = 547;
	C_CHERRY_ROAST_FIN = 548;
	C_CHERRY_ROAST_REVIVE = 549;
	C_CHERRY_ROAST_IMMEDIATE = 550;

	C_THEMACOLLECTIONLIST_POINT_GET = 551;
	C_THEMACOLLECTIONLIST_REWARD_GET = 552;
	C_THEMACOLLECTIONLIST_QUESTCHECK = 553;
	C_CHERRY_ROAST_CANCEL = 554;

	C_SPECIALORDER_CLEAR = 555;
	C_SPECIALORDER_CANCEL = 556;
	C_SPECIALORDER_RENEW = 557;

	C_CASHUSEREWARD_CASHCHECK = 558;
	C_CASHUSEREWARD_GET = 559;

	C_SPECIAL_PACKAGE = 560;

	C_LVUPSHOP_BUY = 561;
	C_LVUPSHOP_PURCHASEITEM_BUYCHECK = 562;

	C_NEWBINGOMISSIONGET = 563;
	C_NEWPOINTMISSIONGET = 564;
	C_NEWPOINTBOXGET = 565;
	C_NEWGOTOFMANAGERGET = 571;

	C_OPEN_NEW_COFFEE_TRUCK = 566;
	C_COFEETRUCK_GAME_FINISH = 567;
	C_GET_COFFEETRUCK_GIFT = 568;
	C_BUY_COFFEETRUCK_SHOP_ITEM = 569;

	C_CHANGE_CFT_CUSTOMER_ITEM = 570;

	C_COFFEETRUCK_SPECIAL_ORDER_MANAGER = 573;
	C_COFFEETRUCK_SPECIAL_ORDER_FINISH = 574;
	C_COFFEETRUCK_SPECIAL_ORDER_RENEW = 575;
	C_COFFEETRUCK_GAME_START = 576;
	C_GET_COFFEETRUCK_RANK = 577;

	C_OPEN_LUCKY_BOXES = 1514;

	C_AUTO_TICKET_ROASTING_MACHINE_START =1517;
	C_AUTO_TICKET_ROASTING_MACHINE_FIN = 1518;
	C_AUTO_TICKET_ROASTING_MACHINE_SHORTEN = 1519;
	C_AUTO_TICKET_ROASTING_MACHINE_REVIVE = 1520;
}
